litmask/tests/compile/mask_rejects_include_str_shim.stderr
error: mask! non-literal: accepts string, byte string, or C string literals; for include_str!(...) use mask_include_str!(...)
 --> tests/compile/mask_rejects_include_str_shim.rs:8:27
  |
8 |     let _: String = mask!(include_str!("examples/fixtures/noc_list.txt"));
  |                           ^^^^^^^^^^^
